# TradeOps

./: .gitignore  HOVEDOPGAVE AMALIE - rettet.docx  HOVEDOPGAVE AMALIE.docx  README.md  build-and-push.ps1  dataflow-diagram.mmd  deploy-aks.ps1  dfd-level0-context.mmd  dfd-level1.mmd  dfd-level2-risk-gateway.mmd  domaenemodel.md  hovedopgave-final.md  hovedopgave-udkast.md  interessentanalyse.md  md-to-pdf.config.js  overview-diagram.mmd  overview-pdf.md  overview.md  start-dashboard-portforward.ps1  ~$VEDOPGAVE AMALIE - rettet.docx
.claude/: settings.local.json
.github/workflows/: deploy-aks.yml
docs/: azure-aks-github-actions.md  dataflow.md
helm/ibkrtrader/: .helmignore  ARCHITECTURE.md  Chart.yaml  values.azure.yaml  values.live.yaml  values.paper.yaml  values.schema.json  values.yaml
helm/ibkrtrader/charts/nats/: .helmignore  Chart.yaml  values.yaml
helm/ibkrtrader/charts/nats/files/: config-map.yaml  headless-service.yaml  pod-disruption-budget.yaml  service.yaml
helm/ibkrtrader/charts/nats/files/config/: config.yaml  jetstream.yaml
helm/ibkrtrader/charts/nats/files/nats-box/contexts-secret/: context.yaml  contexts-secret.yaml
helm/ibkrtrader/charts/nats/files/nats-box/deployment/: container.yaml  pod-template.yaml
helm/ibkrtrader/charts/nats/files/stateful-set/: jetstream-pvc.yaml  nats-container.yaml  pod-template.yaml  reloader-container.yaml  stateful-set.yaml
helm/ibkrtrader/charts/nats/templates/: _helpers.tpl  _jsonpatch.tpl  _toPrettyRawJson.tpl  _tplYaml.tpl  config-map.yaml  extra-resources.yaml  headless-service.yaml  pod-disruption-budget.yaml  service.yaml  stateful-set.yaml
helm/ibkrtrader/charts/nats/templates/nats-box/: contexts-secret.yaml  deployment.yaml
helm/ibkrtrader/charts/nats/templates/tests/: request-reply.yaml
helm/ibkrtrader/templates/: NOTES.txt  _helpers.tpl  api.yaml  dashboard.yaml  db-migrate-job.yaml  ibgateway-secret.yaml  ibgateway-service.yaml  ibgateway-statefulset.yaml  ibkr-adapter.yaml  nats-stream-bootstrap-job.yaml  nats-streams.yaml  risk-gateway.yaml  risk-monitor.yaml  serviceaccount.yaml  servicemonitors.yaml  strategy-deployment.yaml  telegram-secret.yaml  timescale-cluster.yaml
services/api/: Dockerfile  pyproject.toml
services/api/db/migrations/: 001_initial_schema.sql
services/api/src/trader_api/: __init__.py  app.py  config.py  db.py  logging_setup.py  main.py  realtime.py
services/dashboard/: .dockerignore  Dockerfile  build-errors.txt  package-lock.json  package.json  tailwind.config.ts
services/dashboard/src/app/: layout.tsx  page.tsx
services/dashboard/src/app/api/trader/[...path]/: route.ts
services/dashboard/src/components/: FillsTable.tsx  PnLChart.tsx  PositionsTable.tsx  StatusBar.tsx
services/dashboard/src/lib/: api.ts
services/ibkr-adapter/: .coverage  Dockerfile  pyproject.toml
services/ibkr-adapter/src/ibkr_adapter/: __init__.py  config.py  gateway.py  health.py  logging_setup.py  main.py  metrics.py  models.py  nats_bridge.py  subjects.py
services/ibkr-adapter/tests/: test_models.py  test_nats_bridge.py
services/risk-gateway/: .coverage  Dockerfile  pyproject.toml
services/risk-gateway/src/risk_gateway/: __init__.py  app.py  checks.py  config.py  logging_setup.py  main.py  models.py  nats_sync.py
services/risk-gateway/tests/: test_checks.py  test_nats_sync.py
services/risk-monitor/: Dockerfile  pyproject.toml
services/risk-monitor/src/risk_monitor/: __init__.py  alerts.py  circuit_breaker.py  config.py  health.py  kill_switch.py  leader.py  logging_setup.py  main.py  metrics.py  nats_listener.py  state.py
services/risk-monitor/tests/: test_circuit_breaker.py  test_state.py
services/strategy-hello/: Dockerfile  pyproject.toml
services/strategy-hello/src/strategy_hello/: __init__.py  base.py  config.py  logging_setup.py  main.py  strategy.py
services/strategy-hello/tests/: test_strategy.py
services/strategy-nvidia/: Dockerfile  pyproject.toml
services/strategy-nvidia/src/strategy_nvidia/: __init__.py  base.py  config.py  logging_setup.py  main.py  strategy.py
tmp_extracted_docs/: HOVEDOPGAVE AMALIE - Google Docs.txt  HOVEDOPGAVE AMALIE.docx.txt  Hovedopgave Forår 2026 Data-GBG-F24.pptx.txt  Hovedopgaven - en guide (3).txt  Studieordning Afsluttende projekt (DA) 2025_2026.txt
