[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trader-api"
version = "0.1.0"
description = "REST API for ibkrtrader dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "nats-py>=2.9.0",
    "structlog>=24.1",
]

[project.scripts]
trader-api = "trader_api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/trader_api"]

[tool.hatch.envs.default]
dependencies = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
