[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-gateway"
version = "0.1.0"
description = "Synchronous pre-trade risk gateway for ibkrtrader"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "nats-py>=2.9.0",
    "asyncpg>=0.29",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.scripts]
risk-gateway = "risk_gateway.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_gateway"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
