[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-monitor"
version = "0.1.0"
description = "Out-of-band risk monitor and circuit breaker for ibkrtrader"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.9.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "kubernetes>=30.1",           # kill switch: scale strategy Deployments to 0
    "httpx>=0.27",                # Telegram Bot API (no heavy SDK needed)
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "aiohttp>=3.9",               # health-check HTTP server
]

[project.scripts]
risk-monitor = "risk_monitor.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_monitor"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
