[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strategy-hello"
version = "0.1.0"
description = "Moving average crossover strategy — ibkrtrader example"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.9.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",          # HTTP POST to risk-gateway
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.scripts]
strategy-hello = "strategy_hello.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/strategy_hello"]

[tool.hatch.envs.default]
dependencies = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
