[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strategy-nvidia"
version = "0.1.0"
description = "Buy-and-hold NVDA strategy — ibkrtrader"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "nats-py>=2.9.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.scripts]
strategy-nvidia = "strategy_nvidia.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/strategy_nvidia"]

[tool.hatch.envs.default]
dependencies = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
